tests/specs/check/module_not_found/main.out
Download http://localhost:4545/remote.ts
Check [WILDCARD]main.ts
TS2307 [ERROR]: Cannot find module './other.js' or its corresponding type declarations.
import { Test } from "./other.js";
                     ~~~~~~~~~~~~
    at file:///[WILDCARD]/main.ts:1:22

TS2307 [ERROR]: Cannot find module 'http://localhost:4545/remote.ts' or its corresponding type declarations.
import { Remote } from "http://localhost:4545/remote.ts";
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    at file:///[WILDCARD]/main.ts:2:24

Found 2 errors.

error: Type checking failed.
