tests/specs/check/module_not_found/main.ts
import { Test } from "./other.js";
import { Remote } from "http://localhost:4545/remote.ts";

console.log(new Test());
console.log(new Remote());
